2013-10-15 Fixed problem with counting errors in Custom Scoring
2013-10-14 Fixed bug with hover effect on mobile devices in Choice and Image Source modules
2013-10-14 Fixed problem with multiple parentheses in latex code
2013-10-14 Fixed bug with limited errors in Custom Scoring
2013-10-09 Fixed True/False and Table not loading properly due to bug 'c.find is undefined'
2013-10-09 Fixed Glossary links on feedback when div.ic_page had more then one class
2013-10-09 Fixed bug with calculating graph max score when activity was not started
2013-10-09 Fixed bug with hover effect on mobile devices in Double State Button
2013-10-09 Fixed bug with black background on IE 10 in Multiplegap addon
2013-10-08 Fixed problem with definition event in book mode
2013-10-08 event bug on safari in Video addon fixed
2013-10-07 Fixed problem with next page in book mode while presentation contains 2 pages only
2013-10-07 event bug in addons Graph and Single State Button fixed
2013-10-07 Added getView function for modules
2013-10-06 Changed navigation arrows default styling.
2013-10-04 Fixed bug in event propagation in Double State Button
2013-10-04 Removed user-select property from Drawing module styles, which was causing inability to select property value in Editor
2013-10-03 Added stop propagation to addons: Crossword, Graph, Line Number, Plot, Audio, Drawing, IMageViewer Button Controller, Multi audio, DOuble State Button, Single State Button, Slider, Event Sender
2013-10-03 Navigation arrows restored
2013-10-03 Added stop propagation to addons: Connection, Hangman, Image Identification, Magic boxes, Gamememo, Multiplegap, Puzzle, Text selection, True False, Writing Calculations, Navigation Bar, Slide show, Image viewer, Animation
2013-10-03 MP4 sources are now prefered in video addon
2013-10-02 Fixed problem with Navigation Bar with page indexes.
2013-10-02 Fixed problem with blocking Line Number addon and added new class 'disable' to '.outer' div when property 'Disable' is on true