@@ -1,3 +1,4 @@
+2013-10-16 Added CSS3 animation to navigation arrows
 2013-10-15 Fixed problem with counting errors in Custom Scoring
 2013-10-14 Fixed bug with hover effect on mobile devices in Choice and Image Source modules
 2013-10-14 Fixed problem with multiple parentheses in latex code
